<resources>
    <string name="app_name">PmsAIU</string>

    <string name="student_inf">

Student Information System
</string>

    <!-- strings.xml -->
    <string name="label">

Sign in
</string>

    <!-- strings.xml -->
    <string name="sign_in">

Sign in
</string>

    <!-- strings.xml -->
    <string name="username">

Name
</string>


    <!-- strings.xml -->
    <string name="label.name">

Name
</string>


    <!-- strings.xml -->
    <string name="label.sname">

Surname
</string>

    <!-- strings.xml -->
    <string name="Surname">

Surname
</string>

    <!--    NavDrawer-->

    <string name="schedule_of">

Schedule of lectures
</string>
    <string name="my_grades">

My grades
</string>

    <string name="transcript">

Transcript
</string>

    <string name="questionnai">

Questionnaires
</string>

    <string name="university_">

University mail
</string>

    <string name="kalzira_s">

Kalzira Sabytakunova
</string>


    <string name="some_id">

17010101382
</string>


    <string name="other_event">

Other events
</string>

    <!-- strings.xml -->
    <string name="title_event">

Software engineering \nSeminar
</string>

    <!-- strings.xml -->
    <string name="speaker_event">

Nurlan Shaidullaev
</string>

    <string name="time_event">

11:00-13:00
</string>


    <!-- strings.xml -->
    <string name="location_event">

A309
</string>

    <string name="oleg_dzhuma">

Oleg Dzhumanaliev
</string>
    <string name="study_abroa">

Study abroad \nSeminar
</string>
    <string name="tomorrow_15">

Tomorrow\n15:00-17:00
</string>

    <string name="konya_hall">

Konya Hall
</string>

    <string name="olga_kan">

Olga Kan
</string>

    <string name="smm">

SMM
</string>


    <!--PROFILE-->

    <string name="name_surnam_profile">

Name Surname:
</string>
    <string name="student_id_profile">

Student ID:
</string>

    <string name="birth_date_profile">

Birth Date:
</string>

    <string name="bday_profile">

22/11/1998
</string>
    <string name="class_profile">

Class:
</string>

    <string name="com_16_profile">

COM-16
</string>
    <string name="advisor_profile">

Advisor:
</string>

    <string name="nurlan_shai_profile">

Nurlan Shaidullaev
</string>

    <string name="status_profile">

Status:
</string>

    <!--PROFILE-->


    <!--     HOME-->
    <string name="saturday_25">SATURDAY 25 JANUARY</string>
    <string name="today">Today</string>


    <string name="title_activity_home_page"> </string>

    <!--    NEWS DETAIL-->

    <string name="txt_newsDetail">

Reprehenderit non irure dolore ullamco aute. Enim dolor ipsum quis tempor dolor deserunt nostrud do quis minim enim ipsum. Esse ad excepteur enim reprehenderit duis consequat mollit. Dolor labore exercitation voluptate aute dolore esse dolor occaecat amet laboris enim.\n\nCupidatat esse quis tempor voluptate Lorem reprehenderit tempor officia cupidatat proident consectetur eiusmod consequat aliquip. Eiusmod officia dolor fugiat tempor ullamco proident ut pariatur nostrud eu officia consectetur irure sunt.
Reprehenderit non irure dolore ullamco aute. Enim dolor ipsum quis tempor dolor deserunt nostrud do quis minim enim ipsum. Esse ad excepteur enim reprehenderit duis consequat mollit. Dolor labore exercitation voluptate aute dolore esse dolor occaecat amet laboris enim.\n\nCupidatat esse quis tempor voluptate Lorem reprehenderit tempor officia cupidatat proident consectetur eiusmod consequat aliquip. Eiusmod officia dolor fugiat tempor ullamco proident ut pariatur nostrud eu officia consectetur irure sunt.
Reprehenderit non irure dolore ullamco aute. Enim dolor ipsum quis tempor dolor deserunt nostrud do quis minim enim ipsum. Esse ad excepteur enim reprehenderit duis consequat mollit. Dolor labore exercitation voluptate aute dolore esse dolor occaecat amet laboris enim.\n\nCupidatat esse quis tempor voluptate Lorem reprehenderit tempor officia cupidatat proident consectetur eiusmod consequat aliquip. Eiusmod officia dolor fugiat tempor ullamco proident ut pariatur nostrud eu officia consectetur irure sunt.


    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="data_home">WEDNESDAY 22 JANUARY</string>
    <string name="today_home">Today</string>
    <string name="studying_profile">Studying</string>
    <string name="balance_profile">Balance:</string>
    <string name="usd_profile">0 USD</string>
    <string name="grant_type_profile">Grant Type:</string>
    <string name="not_availab_profile">Not available</string>
    <string name="email_profile">Email:</string>
    <string name="kalzira_s_email_profile">kalzira.sabytakunova@iaau.edu.kg</string>
    <string name="title_profile">Student Information</string>
    <string name="signOut">Sign Out</string>
    <string name="contacts">Contact</string>
    <string name="title_grades">My Grades</string>
    <string-array name="yearAndTerm">
        <item>2016-2017 1.Term</item>
        <item>2016-2017 1.Term</item>
        <item>2016-2017 1.Term</item>
        <item>2016-2017 1.Term</item>
        <item>2016-2017 1.Term</item>
    </string-array>
    <string-array name="faculties">
        <item>Faculty of Engineering and Informatics</item>
        <item>Faculty of Social Sciences</item>
        <item>Faculty of Economics and Administrative Sciences</item>
        <item>Faculty of Medicine</item>
        <item>Vocational education</item>
        <item>Distance Learning Center</item>
        <item>Institute of Languages</item>
    </string-array>


</resources>
