<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:elevation="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="0sp"
            android:text="@string/today"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="18dp"
            android:textAppearance="@style/today"
            android:translationY="-0.21sp" />




        <ImageView
            android:id="@+id/imgNews"
            android:layout_width="382dp"
            android:layout_height="230dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/home_photo"/>

        <!--    &lt;!&ndash; 11:00-13:00 &ndash;&gt;-->

        <TextView
            android:id="@+id/timeNews"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:gravity="bottom"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="left"
            android:text="@string/time_event"
            android:textAppearance="@style/time"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/map_event"
                android:layout_width="11dp"
                android:layout_height="15dp"
                android:layout_marginLeft="18dp"
                android:backgroundTint="@android:color/black"
                android:layout_marginBottom="16dp"
                android:background="@drawable/map"/>


            <TextView
                android:id="@+id/locationNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center|left"
                android:text="@string/location_event"
                android:textAppearance="@style/a309"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

    </LinearLayout>





</androidx.cardview.widget.CardView>
