<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationMenu.news.NewsDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="6dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
            <LinearLayout
                android:id="@+id/parentLayout"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/titleNews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="0sp"
                    android:text="@string/today"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="18dp"
                    android:textAppearance="@style/today"
                    android:translationY="-0.21sp" />

                <ImageView
                    android:id="@+id/imgNews"
                    android:layout_width="382dp"
                    android:layout_height="230dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/home_photo"/>

                <!--    &lt;!&ndash; 11:00-13:00 &ndash;&gt;-->

                <TextView
                    android:id="@+id/timeNews"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="bottom"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="left"
                    android:text="@string/time_event"
                    android:textAppearance="@style/time"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/map_event"
                        android:layout_width="11dp"
                        android:layout_height="15dp"
                        android:layout_marginLeft="18dp"
                        android:backgroundTint="@android:color/black"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/map"/>


                    <TextView
                        android:id="@+id/locationNews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="center|left"
                        android:text="@string/location_event"
                        android:textAppearance="@style/a309"
                        android:layout_marginLeft="10dp" />

                </LinearLayout>




            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false">

<!--            <androidx.appcompat.widget.Toolbar-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="?attr/actionBarSize"-->
<!--                android:id="@+id/toolbar"-->
<!--                android:backgroundTint="@android:color/transparent"/>-->

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!--<include layout="@layout/content_scrolling" />-->

    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/txt_newsDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:text="@string/txt_newsDetail" />

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

